# vessel

./: .justfile  Cargo.toml
assets/local/: .gitignore
src/: editor.rs  main.rs  multiplayer.rs  network.rs  vessel_builder.rs
src/editor/: element.rs  input.rs  misc.rs  mod.rs  object.rs
src/multiplayer/: mod.rs  network.rs  ui.rs
src/worldplay/: mod.rs  player.rs  user.rs  vessel.rs
