[package]
name = "vessel"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.1.2"
bevy_replicon = "0.28.4"
bevy_replicon_renet = "0.5.0"
serde = "1.0.214"


[dependencies.derive_more]
version = "1.0.0"
features = ["from","into"]

[dependencies.bevy_mod_picking]
version = "0.20.1"
default-features = false
features = [
	"backend_raycast",
	"debug",
	"highlight"
]

[dependencies.bevy_egui]
version = "0.30"
default-features = false
features = [
	"render",
	"default_fonts",
]

[dependencies.bevy]
version = "0.14"
features = ["dynamic_linking"]
