[package]
name = "vessel"
version = "0.1.0"
edition = "2021"



[lints.clippy]
type_complexity = "allow" # bevy queries get quite complex
too_many_arguments = "allow" # bevy systems get quite complex



[profile.dev.package."*"]
opt-level = 3


[features]
default = [ "user_interface", "develop" ]

# without user_interface it's a headless dedicated server
user_interface = [
	# "bevy_egui",
	# "bevy/default"
]

# for things that help during development, but should be disbaled on release/distribution
develop = [ "bevy/dynamic_linking" ]


[dependencies]
avian3d = {version="0.1.2", features=["serialize"]}
uuid = "1.10"
bevy_replicon = "0.28.4"
bevy_replicon_renet = "0.5.0"
serde = "1.0.214"
bevy-panic-handler = "3.0.0"
bevy_common_assets = {version = "0.11", features=["ron"]}
bevy-inspector-egui = { version = "0.27.0", default-features = false, features=["bevy_render"] }


[dependencies.derive_more]
version = "1.0.0"
features = ["from","into"]

[dependencies.bevy_mod_picking]
version = "0.20.1"
default-features = false
features = [
	"backend_raycast",
	"debug",
	"highlight"
]

[dependencies.bevy_egui]
version = "0.30"
default-features = false
features = [
	"render",
	"default_fonts",
	"manage_clipboard",
]

[dependencies.bevy]
version = "0.14"
# features = ["dynamic_linking"]
