[package]
name = "vessel"
version = "0.1.0"
edition = "2021"



[lints.clippy]
type_complexity = "allow" # bevy queries get quite complex
too_many_arguments = "allow" # bevy systems get quite complex



[profile.dev.package."*"]
opt-level = 3


[features]
default = [ "user_interface", "develop" ]

# without user_interface it's a headless dedicated server
user_interface = [
	# "bevy_egui",
	# "bevy/default"
]

# for things that help during development, but should be disabled on release/distribution
develop = [ "bevy/dynamic_linking" ]


[dependencies]
avian3d = {version="0.2.0", features=["serialize"]}
uuid = "1.10"
bevy_replicon = "0.29.1"
bevy_replicon_renet = "0.6.0"
serde = "1.0.214"
bevy_common_assets = {version = "0.12", features=["ron"]}
bevy-inspector-egui = { version = "0.28.0", default-features = false, features=["bevy_render"] }


[dependencies.derive_more]
version = "1.0.0"
features = ["from","into"]

[dependencies.bevy_egui]
version = "0.31"
default-features = false
features = [
	"render",
	"default_fonts",
	"manage_clipboard",
]

[dependencies.bevy]
version = "0.15"
# features = ["dynamic_linking"]
